* PrimType.java (coerceFromObject):  Use valueOf methods, if JAVA5.
git-svn-id: svn://sourceware.org/svn/kawa/trunk@6372 5e0a886f-7f45-49c5-bc19-40643649e37f